--- a/ClasesDjango/templates/layouts/partials/menu.html
+++ b/ClasesDjango/templates/layouts/partials/menu.html
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li>
-            <a href="#">Registrar</a>
+            <a href={% url "mostrar_registrar" %}>Registrar</a>
         </li>
         <li>
             <a href="#">Editar</a>
