--- a/ClasesDjango/templates/index.html
+++ b/ClasesDjango/templates/index.html
@@ -1,1 +1,12 @@
 {% extends "layouts/app.html" %}
+
+{% block title %}
+<title>Index</title>
+{% endblock title %}
+
+
+{% block content %}
+<h2>Estoy dentro del bloque content de index</h2>
+{% endblock content %}
+
+
