--- a/ClasesDjango/templates/layouts/partials/menu.html
+++ b/ClasesDjango/templates/layouts/partials/menu.html
@@ -4,7 +4,10 @@
             <a href={% url "mostrar_registrar" %}>Registrar</a>
         </li>
         <li>
-            <a href="#">Editar</a>
+            <a href="{% url 'listar_cursos' %}">Listar</a>
+        </li>
+        <li>
+            <a href="{% url "mostrar_editar" %}">Editar</a>
         </li>
         <li>
             <a href="#">Eliminar</a>
